# mconfig

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CMakeLists.txt  CMakeLists.txt-qt6  README.md  mbaseconfig.cpp  mbaseconfig.h  mconfig.cpp  mconfig.doxyfile  mconfig.h  mconfig.pri  mmetaconfig.cpp  mmetaconfig.h  mmetaconfigeditor.cpp  mmetaconfigeditor.h
editors/: mmetaconfigeditor.cpp  mmetaconfigeditor.h  propertyeditor.cpp  propertyeditor.h  stringeditor.cpp  stringeditor.h
example/: exampleconfig.cpp  exampleconfig.h  main.cpp  mconfig.pro
examples/exampleconfig/: CMakeLists.txt  exampleconfig.cpp  exampleconfig.h  exampleconfig.pro  main.cpp
examples/exampleconfig_with_editor/: CMakeLists.txt  exampleconfig.h  exampleconfig.pro  main.cpp
tst_mconfig/: CMakeLists.txt  submconfig.cpp  submconfig.h  tst_mconfig.cpp  tst_mconfig.pro
tst_mconfig/data/: miloConfTest.ini
